# ctf-team-bandit

./: Makefile  README.md  pyproject.toml
ctf_team_bandit/: config.py  ctf_team_bandit.py  team.py
